--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import "tailwindcss";
 
 :root {
   --bg-color: #dbefff; /* aliceblue */
   --main-color: #00caee;
   --light-color: lighten(#00caee, 40%);
+  --line-test: border 1px solid blue;
   --shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
     inset -5px -5px 5px rgba(255, 255, 255, 0.5),
     5px 5px 5px rgba(0, 0, 0, 0.05), -5px -5px 5px rgba(255, 255, 255, 0.5);
@@ -50,6 +52,7 @@
   }
 }
 
+
 html{
   scroll-behavior: smooth;
 }
@@ -57,7 +60,6 @@ html{
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -80,6 +82,9 @@ body {
 
 
 .btn-primary {
-  @apply px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition;
+  @apply px-4 py-2 text-cyan-500 rounded-lg transition;
+  box-shadow: var(--little-shadow);
 }
+
+
 
